--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <canvas id="canvas"></canvas>
 
         <!--Link the JS file to the html-->
-        <script src="script.js"></script>
+        <script src="/script.js"></script>
     </body>
 </html>
